rust/libyrs.h


typedef struct YDoc {} YDoc;
typedef struct Branch {} Branch;
typedef struct TransactionMut {} TransactionMut;
typedef struct YUndoManager {} YUndoManager;
typedef struct YSubscription {} YSubscription;
typedef YDoc YDoc;
typedef Branch Branch;
typedef union YOutputContent {
  uint8_t flag;
  double num;
  int64_t integer;
  char *str;
  const char *buf;
  struct YOutput *array;
  struct YMapEntry *map;
  Branch *y_type;
  YDoc *y_doc;
} YOutputContent;
typedef struct YOutput {
  int8_t tag;
  uint32_t len;
  union YOutputContent value;
} YOutput;
typedef YSubscription YSubscription;
typedef struct YAfterTransactionEvent {
  struct YStateVector before_state;
  struct YStateVector after_state;
  struct YDeleteSet delete_set;
} YAfterTransactionEvent;
typedef struct YSubdocsEvent {
  uint32_t added_len;
  uint32_t removed_len;
  uint32_t loaded_len;
  YDoc **added;
  YDoc **removed;
  YDoc **loaded;
} YSubdocsEvent;
typedef struct TransactionInner YTransaction;
typedef struct YTextEvent {
  const void *inner;
  const TransactionMut *txn;
} YTextEvent;
typedef struct YMapEvent {
  const void *inner;
  const TransactionMut *txn;
} YMapEvent;
typedef struct YArrayEvent {
  const void *inner;
  const TransactionMut *txn;
} YArrayEvent;
typedef struct YXmlEvent {
  const void *inner;
  const TransactionMut *txn;
} YXmlEvent;
typedef struct YXmlTextEvent {
  const void *inner;
  const TransactionMut *txn;
} YXmlTextEvent;
typedef struct YWeakLinkEvent {
  const void *inner;
  const TransactionMut *txn;
} YWeakLinkEvent;
typedef union YEventContent {
  struct YTextEvent text;
  struct YMapEvent map;
  struct YArrayEvent array;
  struct YXmlEvent xml_elem;
  struct YXmlTextEvent xml_text;
  struct YWeakLinkEvent weak;
} YEventContent;
typedef struct YEvent {
  int8_t tag;
  union YEventContent content;
} YEvent;
typedef union YPathSegmentCase {
  const char *key;
  uint32_t index;
} YPathSegmentCase;
typedef struct YPathSegment {
  char tag;
  union YPathSegmentCase value;
} YPathSegment;
typedef struct YUndoEvent {
  char kind;
  const char *origin;
  uint32_t origin_len;
  void *meta;
} YUndoEvent;
YSubscription *ydoc_observe_updates_v1(YDoc *doc, void *state, void (*cb)(void*,
                                                                          uint32_t,
                                                                          const char*,
                                                                          uint32_t,
                                                                          const char*));
YSubscription *ydoc_observe_updates_v2(YDoc *doc, void *state, void (*cb)(void*,
                                                                          uint32_t,
                                                                          const char*));
YSubscription *ydoc_observe_after_transaction(YDoc *doc,
                                              void *state,
                                              void (*cb)(void*, struct YAfterTransactionEvent*));
YSubscription *ydoc_observe_subdocs(YDoc *doc,
                                    void *state,
                                    void (*cb)(void*, struct YSubdocsEvent*));
YSubscription *ydoc_observe_clear(YDoc *doc, void *state, void (*cb)(void*, YDoc*));
void ytransaction_commit(YTransaction *txn);
void youtput_destroy(struct YOutput *val);
Branch *youtput_read_yxmlelem(const struct YOutput *val);
Branch *youtput_read_ymap(const struct YOutput *val);
Branch *youtput_read_ytext(const struct YOutput *val);
Branch *youtput_read_yxmltext(const struct YOutput *val);
Branch *youtput_read_yweak(const struct YOutput *val);
void yunobserve(YSubscription *subscription);
YSubscription *ytext_observe(const Branch *txt, void *state, void (*cb)(void*,
                                                                        const struct YTextEvent*,
                                                                        uint32_t,
                                                                        const char*));
YSubscription *ymap_observe(const Branch *map, void *state, void (*cb)(void*,
                                                                       const struct YMapEvent*));
YSubscription *yarray_observe(const Branch *array,
                              void *state,
                              void (*cb)(void*, const struct YArrayEvent*));
YSubscription *yxmlelem_observe(const Branch *xml,
                                void *state,
                                void (*cb)(void*, const struct YXmlEvent*));
YSubscription *yxmltext_observe(const Branch *xml,
                                void *state,
                                void (*cb)(void*, const struct YXmlTextEvent*));
YSubscription *yobserve_deep(Branch *ytype, void *state, void (*cb)(void*,
                                                                    uint32_t,
                                                                    const struct YEvent*));
Branch *ytext_event_target(const struct YTextEvent *e);
Branch *yarray_event_target(const struct YArrayEvent *e);
Branch *ymap_event_target(const struct YMapEvent *e);
Branch *yxmlelem_event_target(const struct YXmlEvent *e);
Branch *yxmltext_event_target(const struct YXmlTextEvent *e);
struct YPathSegment *ytext_event_path(const struct YTextEvent *e, uint32_t *len);
struct YPathSegment *ymap_event_path(const struct YMapEvent *e, uint32_t *len);
void ypath_destroy(struct YPathSegment *path, uint32_t len);
YSubscription *yundo_manager_observe_added(YUndoManager *mgr,
                                           void *state,
                                           void (*callback)(void*, const struct YUndoEvent*));
YSubscription *yundo_manager_observe_popped(YUndoManager *mgr,
                                            void *state,
                                            void (*callback)(void*, const struct YUndoEvent*));
YSubscription *yweak_observe(const Branch *weak,
                             void *state,
                             void (*cb)(void*, const struct YWeakLinkEvent*));