lib/y_dart/ffi/y_dart_bindings_generated.dart


/// Attempts to read the value for a given `YOutput` pointer as an `YXmlElement`.
///
/// Returns a null pointer in case when a value stored under current `YOutput` cell
/// is not an `YXmlElement`. Underlying heap resources are released automatically as part of
/// [youtput_destroy] destructor.
@ffi.Native<ffi.Pointer<Branch> Function(ffi.Pointer<YOutput>)>(
    symbol: 'youtput_read_yxmlelem', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<Branch> youtput_read_yxmlelem(
  ffi.Pointer<YOutput> val,
);

/// Attempts to read the value for a given `YOutput` pointer as an `YMap`.
///
/// Returns a null pointer in case when a value stored under current `YOutput` cell
/// is not an `YMap`. Underlying heap resources are released automatically as part of
/// [youtput_destroy] destructor.
@ffi.Native<ffi.Pointer<Branch> Function(ffi.Pointer<YOutput>)>(
    symbol: 'youtput_read_ymap', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<Branch> youtput_read_ymap(
  ffi.Pointer<YOutput> val,
);

/// Attempts to read the value for a given `YOutput` pointer as an `YText`.
///
/// Returns a null pointer in case when a value stored under current `YOutput` cell
/// is not an `YText`. Underlying heap resources are released automatically as part of
/// [youtput_destroy] destructor.
@ffi.Native<ffi.Pointer<Branch> Function(ffi.Pointer<YOutput>)>(
    symbol: 'youtput_read_ytext', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<Branch> youtput_read_ytext(
  ffi.Pointer<YOutput> val,
);

/// Attempts to read the value for a given `YOutput` pointer as an `YXmlText`.
///
/// Returns a null pointer in case when a value stored under current `YOutput` cell
/// is not an `YXmlText`. Underlying heap resources are released automatically as part of
/// [youtput_destroy] destructor.
@ffi.Native<ffi.Pointer<Branch> Function(ffi.Pointer<YOutput>)>(
    symbol: 'youtput_read_yxmltext', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<Branch> youtput_read_yxmltext(
  ffi.Pointer<YOutput> val,
);

/// Attempts to read the value for a given `YOutput` pointer as an `YWeakRef`.
///
/// Returns a null pointer in case when a value stored under current `YOutput` cell
/// is not an `YWeakRef`. Underlying heap resources are released automatically as part of
/// [youtput_destroy] destructor.
@ffi.Native<ffi.Pointer<Branch> Function(ffi.Pointer<YOutput>)>(
    symbol: 'youtput_read_yweak', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<Branch> youtput_read_yweak(
  ffi.Pointer<YOutput> val,
);

/// Unsubscribe callback from the oberver event it was previously subscribed to.
@ffi.Native<ffi.Void Function(ffi.Pointer<YSubscription>)>(
    symbol: 'yunobserve', assetId: 'package:y_dart/y_dart')
external void yunobserve(
  ffi.Pointer<YSubscription> subscription,
);

/// Subscribes a given callback function `cb` to changes made by this `YText` instance. Callbacks
/// are triggered whenever a `ytransaction_commit` is called.
/// Returns a subscription ID which can be then used to unsubscribe this callback by using
/// `yunobserve` function.
@ffi.Native<
        ffi.Pointer<YSubscription> Function(
            ffi.Pointer<Branch>,
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<
                ffi.NativeFunction<
                    ffi.Void Function(
                        ffi.Pointer<ffi.Void>, ffi.Pointer<YTextEvent>)>>)>(
    symbol: 'ytext_observe', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YSubscription> ytext_observe(
  ffi.Pointer<Branch> txt,
  ffi.Pointer<ffi.Void> state,
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<YTextEvent>)>>
      cb,
);

/// Subscribes a given callback function `cb` to changes made by this `YMap` instance. Callbacks
/// are triggered whenever a `ytransaction_commit` is called.
/// Returns a subscription ID which can be then used to unsubscribe this callback by using
/// `yunobserve` function.
@ffi.Native<
        ffi.Pointer<YSubscription> Function(
            ffi.Pointer<Branch>,
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<
                ffi.NativeFunction<
                    ffi.Void Function(
                        ffi.Pointer<ffi.Void>, ffi.Pointer<YMapEvent>)>>)>(
    symbol: 'ymap_observe', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YSubscription> ymap_observe(
  ffi.Pointer<Branch> map,
  ffi.Pointer<ffi.Void> state,
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<YMapEvent>)>>
      cb,
);

/// Subscribes a given callback function `cb` to changes made by this `YArray` instance. Callbacks
/// are triggered whenever a `ytransaction_commit` is called.
/// Returns a subscription ID which can be then used to unsubscribe this callback by using
/// `yunobserve` function.
@ffi.Native<
        ffi.Pointer<YSubscription> Function(
            ffi.Pointer<Branch>,
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<
                ffi.NativeFunction<
                    ffi.Void Function(
                        ffi.Pointer<ffi.Void>, ffi.Pointer<YArrayEvent>)>>)>(
    symbol: 'yarray_observe', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YSubscription> yarray_observe(
  ffi.Pointer<Branch> array,
  ffi.Pointer<ffi.Void> state,
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<YArrayEvent>)>>
      cb,
);

/// Subscribes a given callback function `cb` to changes made by this `YXmlElement` instance.
/// Callbacks are triggered whenever a `ytransaction_commit` is called.
/// Returns a subscription ID which can be then used to unsubscribe this callback by using
/// `yunobserve` function.
@ffi.Native<
        ffi.Pointer<YSubscription> Function(
            ffi.Pointer<Branch>,
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<
                ffi.NativeFunction<
                    ffi.Void Function(
                        ffi.Pointer<ffi.Void>, ffi.Pointer<YXmlEvent>)>>)>(
    symbol: 'yxmlelem_observe', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YSubscription> yxmlelem_observe(
  ffi.Pointer<Branch> xml,
  ffi.Pointer<ffi.Void> state,
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<YXmlEvent>)>>
      cb,
);

/// Subscribes a given callback function `cb` to changes made by this `YXmlText` instance. Callbacks
/// are triggered whenever a `ytransaction_commit` is called.
/// Returns a subscription ID which can be then used to unsubscribe this callback by using
/// `yunobserve` function.
@ffi.Native<
        ffi.Pointer<YSubscription> Function(
            ffi.Pointer<Branch>,
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<
                ffi.NativeFunction<
                    ffi.Void Function(
                        ffi.Pointer<ffi.Void>, ffi.Pointer<YXmlTextEvent>)>>)>(
    symbol: 'yxmltext_observe', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YSubscription> yxmltext_observe(
  ffi.Pointer<Branch> xml,
  ffi.Pointer<ffi.Void> state,
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<YXmlTextEvent>)>>
      cb,
);

/// Subscribes a given callback function `cb` to changes made by this shared type instance as well
/// as all nested shared types living within it. Callbacks are triggered whenever a
/// `ytransaction_commit` is called.
///
/// Returns a subscription ID which can be then used to unsubscribe this callback by using
/// `yunobserve` function.
@ffi.Native<
        ffi.Pointer<YSubscription> Function(
            ffi.Pointer<Branch>,
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<
                ffi.NativeFunction<
                    ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Uint32,
                        ffi.Pointer<YEvent>)>>)>(
    symbol: 'yobserve_deep', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YSubscription> yobserve_deep(
  ffi.Pointer<Branch> ytype,
  ffi.Pointer<ffi.Void> state,
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<ffi.Void>, ffi.Uint32, ffi.Pointer<YEvent>)>>
      cb,
);

/// Returns a pointer to a shared collection, which triggered passed event `e`.
@ffi.Native<ffi.Pointer<Branch> Function(ffi.Pointer<YTextEvent>)>(
    symbol: 'ytext_event_target', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<Branch> ytext_event_target(
  ffi.Pointer<YTextEvent> e,
);

/// Returns a pointer to a shared collection, which triggered passed event `e`.
@ffi.Native<ffi.Pointer<Branch> Function(ffi.Pointer<YArrayEvent>)>(
    symbol: 'yarray_event_target', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<Branch> yarray_event_target(
  ffi.Pointer<YArrayEvent> e,
);

/// Returns a pointer to a shared collection, which triggered passed event `e`.
@ffi.Native<ffi.Pointer<Branch> Function(ffi.Pointer<YMapEvent>)>(
    symbol: 'ymap_event_target', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<Branch> ymap_event_target(
  ffi.Pointer<YMapEvent> e,
);

/// Returns a pointer to a shared collection, which triggered passed event `e`.
@ffi.Native<ffi.Pointer<Branch> Function(ffi.Pointer<YXmlEvent>)>(
    symbol: 'yxmlelem_event_target', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<Branch> yxmlelem_event_target(
  ffi.Pointer<YXmlEvent> e,
);

/// Returns a pointer to a shared collection, which triggered passed event `e`.
@ffi.Native<ffi.Pointer<Branch> Function(ffi.Pointer<YXmlTextEvent>)>(
    symbol: 'yxmltext_event_target', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<Branch> yxmltext_event_target(
  ffi.Pointer<YXmlTextEvent> e,
);

/// Returns a path from a root type down to a current shared collection (which can be obtained using
/// `ytext_event_target` function). It can consist of either integer indexes (used by sequence
/// components) of *char keys (used by map components). `len` output parameter is used to provide
/// information about length of the path.
///
/// Path returned this way should be eventually released using `ypath_destroy`.
@ffi.Native<
        ffi.Pointer<YPathSegment> Function(
            ffi.Pointer<YTextEvent>, ffi.Pointer<ffi.Uint32>)>(
    symbol: 'ytext_event_path', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YPathSegment> ytext_event_path(
  ffi.Pointer<YTextEvent> e,
  ffi.Pointer<ffi.Uint32> len,
);

/// Returns a path from a root type down to a current shared collection (which can be obtained using
/// `ymap_event_target` function). It can consist of either integer indexes (used by sequence
/// components) of *char keys (used by map components). `len` output parameter is used to provide
/// information about length of the path.
///
/// Path returned this way should be eventually released using `ypath_destroy`.
@ffi.Native<
        ffi.Pointer<YPathSegment> Function(
            ffi.Pointer<YMapEvent>, ffi.Pointer<ffi.Uint32>)>(
    symbol: 'ymap_event_path', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YPathSegment> ymap_event_path(
  ffi.Pointer<YMapEvent> e,
  ffi.Pointer<ffi.Uint32> len,
);
